# Liv-Stage---FOCOS-Hand-Over

./: README.md  pyproject.toml
Code/: =1.7.0  Connectedness.ipynb  Functions.py  Wrangling.ipynb  Wrangling2.ipynb  french_ca_test.ipynb  graphfunk.py  matrices.ipynb  pyproject.toml  sparseCA.ipynb  utils.py  utils2.py
Code/Brand Validation/: Bio_validation.ipynb  CA_labelled_markers.ipynb  CORG.ipynb  Income_val.ipynb  bigrams.csv  brand_val.ipynb  lønn_jobbtitler.csv  marker_inclusion.ipynb  marketing_api.ipynb  test.ipynb  titler_lønn.csv  uni_last1000.csv
Code/Brand Validation/Data/: INSEE_keywords.xlsx  INSEE_merged.csv  keywords_INSEE.csv  public_salaries.csv  titler_lønn.csv  trigrams.csv
Code/Brand Validation/Data/annotations/: onlygreens.csv  onlygreens1.csv  source2.csv
Code/Graph preparation/: CORG_wrangling.ipynb  Wrangling2.ipynb  Wrangling2_old_no_deletion.ipynb  french_ca_test.ipynb  sparseCA.ipynb
Code/Timpackage/: pyvenv.cfg
Code/Utility files/: Ca_class.py  ca_pipeline.py  ca_pipeline_saveall.py  corg_pipeline.py  corg_test.py  graphfunk.py  grouped_reg_test.py  langutils.py  model_comparison.py  utils2.py
Code/Validation/: Brand_validation_api.ipynb  CA_all_models.ipynb  CORG.ipynb  Diminspection.ipynb  Income_val.ipynb  Income_val_prep.ipynb  Robusmodel.ipynb  table.html
Code/Validation/Data/: N_grams_INSEE.csv  keywords_INSEE.csv  onlygreens_cleaned.csv  private_salaries.csv  source2_titles.csv  unigrams.csv
Code/geotext-env/: pyproject.toml
Code/myenv/: pyvenv.cfg
labeldata/: filled_labels_markers.csv  grov_betaling.csv  grov_rett.csv  income_private.csv  income_private.xls  income_private.xlsx  income_private_sector.csv  income_public_sector.csv  job_titles.xlsx  labeled_markers.csv  public_income.csv  titles.xlsx
