[tool.poetry]
name = "10-jan-thesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "10"}]

[tool.poetry.dependencies]
python = "^3.8"
geotext = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
