[tool.poetry]
name = "thesis10-1"
version = "0.1.0"
description = "Second attempt of making thesis env work"
authors = ["Liv T"]
readme = "README.md"
packages = [{include = "thesis10"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.28.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
datetime = "^5.4"
seaborn = "^0.13.1"
dask = "^2023.12.1"
importlib = "^1.0.4"
nltk = "^3.8.1"
psutil = "^5.9.7"
langdetect = "^1.0.9"
emoji = "^2.9.0"
unicode = "^2.9"
unidecode = "^1.3.8"
prince = "^0.13.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
