[tool.poetry]
name = "thesis10-1"
version = "0.1.0"
description = "S"
authors = ["Liv T"]
readme = "../README.md"
packages = [{include = "thesis10"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.28.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
datetime = "^5.4"
seaborn = "^0.13.1"
dask = "^2023.12.1"
importlib = "^1.0.4"
nltk = "^3.8.1"
psutil = "^5.9.7"
langdetect = "^1.0.9"
emoji = "^2.9.0"
unicode = "^2.9"
unidecode = "^1.3.8"
matplotlib = "^3.8.2"
joblib = "^1.3.2"
ftfy = "^6.1.3"
regex = "^2023.12.25"
protobuf = "^4.25.2"
networkx = "^3.2.1"
openpyxl = "^3.1.2"
adjusttext = "^1.0.4"
delayedsparse = "^0.2.4"
prince = "^0.13.0"
python-louvain = "^0.16"
locationtagger = "^0.0.1"
geonamescache = "^2.0.0"
matplotlib-venn = "^0.11.10"
upsetplot = "^0.9.0"
powerlaw = "^1.5"
netgraph = "^4.13.2"
corg = "^0.3"
imblearn = "^0.0"
textacy = "^0.13.0"
wordcloud = "^1.9.3"
bertopic = "^0.16.0"
textnets = "^0.9.4"
requests = "^2.31.0"
chardet = "^5.2.0"
spacy = "^3.7.4"
statsmodels = "^0.14.1"
facebook-business = "^19.0.2"
pycountry = "^23.12.11"
dataframe-image = "^0.2.3"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



